update README; fix title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "async-redux-comp",
+  "name": "react-chained-modals-comparison",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
