--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "6.5.0",
     "bootstrap-sass": "3.3.6",
     "react": "0.14.7",
     "react-bootstrap": "0.28.3",
@@ -16,6 +17,7 @@
     "react-redux": "4.4.0",
     "react-router": "2.0.0",
     "redux": "3.3.1",
+    "redux-saga": "0.9.1",
     "redux-thunk": "1.0.3"
   },
   "devDependencies": {
