--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "5.0.0",
     "babel-loader": "6.2.4",
     "babel-plugin-react-transform": "2.0.0",
+    "babel-plugin-transform-async-to-generator": "6.5.0",
     "babel-plugin-transform-class-properties": "6.6.0",
     "babel-plugin-transform-object-rest-spread": "6.6.4",
     "babel-preset-es2015": "6.6.0",
