--- a/.babelrc
+++ b/.babelrc
@@ -7,18 +7,7 @@
   ],
   "env": {
     "development": {
-      "plugins": [
-        ["react-transform", {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }, {
-            "transform": "react-transform-catch-errors",
-            "imports": ["react", "redbox-react", "reporterOptions"]
-          }]
-        }]
-      ]
+      "presets": ["react-hmre"]
     }
   }
 }
