--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "node devServer.js",
     "build": "NODE_ENV=production webpack"
   },
   "author": "",
@@ -30,10 +30,12 @@
     "babel-plugin-transform-object-rest-spread": "6.6.5",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
+    "babel-preset-react-hmre": "1.1.1",
     "clean-webpack-plugin": "0.1.8",
     "css-loader": "0.23.1",
     "eslint": "2.3.0",
     "eslint-plugin-react": "4.2.0",
+    "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.9.0",
     "node-sass": "3.4.2",
@@ -44,7 +46,8 @@
     "sass-loader": "3.1.2",
     "style-loader": "0.13.0",
     "webpack": "1.12.14",
-    "webpack-dev-server": "1.14.1",
+    "webpack-dev-middleware": "1.5.1",
+    "webpack-hot-middleware": "2.9.1",
     "webpack-merge": "0.8.3"
   }
 }
