--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "test": "npm run test:coverage",
+    "test:nocov": "NODE_ENV=test mocha --compilers js:babel-core/register src",
+    "test:watch": "npm run test:nocov -- --watch",
+    "test:coverage": "NODE_ENV=test babel-istanbul cover _mocha -- src/**/*.test.js",
     "start": "node devServer.js",
     "build": "NODE_ENV=production webpack"
   },
@@ -23,6 +27,7 @@
   "devDependencies": {
     "babel-core": "6.6.5",
     "babel-eslint": "5.0.0",
+    "babel-istanbul": "0.6.1",
     "babel-loader": "6.2.4",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-async-to-generator": "6.5.0",
@@ -31,19 +36,25 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
+    "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.8",
     "css-loader": "0.23.1",
+    "enzyme": "2.0.0",
     "eslint": "2.3.0",
     "eslint-plugin-react": "4.2.0",
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.9.0",
+    "mocha": "2.4.5",
     "node-sass": "3.4.2",
     "react": "0.14.7",
+    "react-addons-test-utils": "0.14.7",
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
     "redbox-react": "1.2.2",
+    "redux-mock-store": "0.0.6",
     "sass-loader": "3.1.2",
+    "sinon": "1.17.3",
     "style-loader": "0.13.0",
     "webpack": "1.12.14",
     "webpack-dev-middleware": "1.5.1",
