--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "chai": "3.5.0",
+    "chai-as-promised": "5.2.0",
     "clean-webpack-plugin": "0.1.8",
     "css-loader": "0.23.1",
     "enzyme": "2.0.0",
